--- a/src/containers/DefaultLayout/DefaultLayout.css
+++ b/src/containers/DefaultLayout/DefaultLayout.css
@@ -2,6 +2,12 @@
   height: 100vh;
 }
 
+.DefaultLayout .logo {
+  height: 32px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px;
+}
+
 .DefaultLayout .trigger {
   font-size: 18px;
   line-height: 64px;
@@ -14,6 +20,11 @@
   color: #1890ff;
 }
 
+.DefaultLayout .sider {
+  box-shadow: 2px 0 8px rgba(29, 35, 81, 0.15);
+}
+
 .DefaultLayout .header {
   background: #fff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
 }
