Add Logout menu

--- a/src/containers/DashboardLayout/DashboardLayout.css
+++ b/src/containers/DashboardLayout/DashboardLayout.css
@@ -9,7 +9,7 @@
 }
 
 .DashboardLayout .trigger {
-  font-size: 18px;
+  font-size: 20px;
   line-height: 64px;
   padding: 0 24px;
   cursor: pointer;
@@ -27,4 +27,10 @@
 .DashboardLayout .header {
   background: #fff;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
+}
+
+.DashboardLayout .header-right {
+  float: right;
+  margin-left: auto;
+  line-height: 64px;
 }
