Adjust styles on DashboardLayout

--- a/src/containers/DashboardLayout/DashboardLayout.module.css
+++ b/src/containers/DashboardLayout/DashboardLayout.module.css
@@ -21,11 +21,13 @@
 }
 
 .sider {
-  box-shadow: 2px 0 8px rgba(29, 35, 81, 0.15);
+  z-index: 2;
+  box-shadow: 2px 0 8px rgba(0, 21, 41, 0.35);
 }
 
 .header {
   background: #fff;
+  z-index: 1;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
 }
 
@@ -33,4 +35,8 @@
   float: right;
   margin-left: auto;
   line-height: 64px;
+}
+
+.content {
+  z-index: 0;
 }
