--- a/ui-v2/src/containers/DashboardLayout/DashboardLayout.module.css
+++ b/ui-v2/src/containers/DashboardLayout/DashboardLayout.module.css
@@ -3,9 +3,12 @@
 }
 
 .logo {
+  background-color: #fff;
   height: 32px;
-  background: rgba(255, 255, 255, 0.2);
+  background-image: url(../../hotstone-seo.png);
   margin: 16px;
+  background-size: 100px 32px;
+  background-repeat:no-repeat;
 }
 
 .trigger {
