--- a/ui-v2/src/containers/DashboardLayout/DashboardLayout.module.css
+++ b/ui-v2/src/containers/DashboardLayout/DashboardLayout.module.css
@@ -3,12 +3,12 @@
 }
 
 .logo {
-  background-color: #fff;
-  height: 32px;
+  /* background-color: #fff;
   background-image: url(../../hotstone-seo.png);
-  margin: 16px;
   background-size: 100px 32px;
-  background-repeat:no-repeat;
+  background-repeat: no-repeat; */
+  height: 32px;
+  margin: 16px;
 }
 
 .trigger {
