Allow dynamic logo in DashboardLayout based on collapse

--- a/ui-v2/src/containers/DashboardLayout/DashboardLayout.module.css
+++ b/ui-v2/src/containers/DashboardLayout/DashboardLayout.module.css
@@ -3,10 +3,7 @@
 }
 
 .logo {
-  /* background-color: #fff;
-  background-image: url(../../hotstone-seo.png);
-  background-size: 100px 32px;
-  background-repeat: no-repeat; */
+  background-repeat: no-repeat;
   height: 32px;
   margin: 16px;
 }
